[package]
name = "hacking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
users = "0.11.0"

[[bin]]
name = "first"
path = "src/first.rs"

[[bin]]
name = "char_array"
path = "src/char_array.rs"

[[bin]]
name = "heap_example"
path = "src/heap_example.rs"

[[bin]]
name = "test_stack"
path = "src/test_stack.rs"

[[bin]]
name = "notetaker"
path = "src/notetaker.rs"